--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="color-scheme" content="dark light">
   <title>久美子超载 - KumikoAwesome</title>
   <link rel="stylesheet" href="./index.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body>
   <main class="main-container">
