fix: 图片在移动端被挡

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="applicable-device" content="pc,mobile">
   <meta name="google" content="notranslate">
   <meta name="theme-color" content="#111">
-  <meta name="color-scheme" content="dark light">
+  <meta name="color-scheme" content="dark">
   <title>久美子超载 - KumikoAwesome</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
