chore: 优化代码和翻页动画

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh_Hans_CN">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,22 @@
   <meta name="google" content="notranslate">
   <meta name="theme-color" content="#111">
   <meta name="color-scheme" content="dark">
+  <meta name="description" content="久美子超载ヾ(≧▽≦*)o 要来点久美子嘛~">
+  <meta name="keywords" content="久美子, 久美子超载, kumiko, 吹响吧 上低音号">
   <title>久美子超载 - KumikoAwesome</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FWE91T9QLX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FWE91T9QLX');
+  </script>
 </head>
+
 <body>
   <main class="main-container">
     <div class="group">
@@ -20,4 +33,5 @@
   </main>
   <script src="./index.js"></script>
 </body>
+
 </html>
