--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
     const bgm = ['07. 松田彬人 - 弾む想い.wav', '05. 松田彬人 - 青春の流転.wav'].map(k => `./public/audios/ost/${k}`)
     const gibberish = ['1.wav', '3.wav', '4.wav', '5.wav', '6.wav', '7.wav', '8.wav', '9.wav', '11.wav', '12.wav', '13.wav', '14.wav', '15.wav', '16.wav', '17.wav', '18.wav', '19.wav', '20.wav', '21.wav', '23.wav', '24.wav', '25.wav', '26.wav', '27.wav', '28.wav', '29.wav', '30.wav', '31.wav', '32.wav', '33.wav', '34.wav', '35.wav', '36.wav', '37.wav', '38.wav'].map(k => `./public/audios/${k}`)
 
-    const { searchParams } = new URL(window.location.href);
-    const { size } = searchParams
-
-    const KA = new KumikoAwesome(images, 20, 50, gibberish)
+    const KA = new KumikoAwesome(images, gibberish)
     KA.init('.group')
 
     randomLoopingMusicPlayer(bgm)
